--- a/build.yml
+++ b/build.yml
@@ -3,9 +3,9 @@ platform: linux
 image_resource:
   type: docker-image
   source: 
-    repository: ruby
-    tag: 2.3.0
- 
+    repository: debian 
+    tag: "latest"
+
 inputs:
 - name: flight-school
 
